allow local file access, remove alert on error

--- a/patch/index.html
+++ b/patch/index.html
@@ -26,14 +26,9 @@
 <script type="text/javascript" src="js/patch.js"></script>
 
 <script>
-  /**
-   * Called when there was a cables error.
-   * @param {string} errId - ID of the error, e.g. 'NO_WEBGL' or 'NO_WEBAUDIO'
-   *                         when the browser does not support the used APIs
-   * @param {string} errMsg - The error message
-   */
+
   function showError(errId, errMsg) {
-    alert('An error occured: ' + errId + ', ' + errMsg);
+    // handle critical errors here if needed
   }
 
   function patchInitialized() {
@@ -53,6 +48,7 @@
       onError: showError,
       onPatchLoaded: patchInitialized,
       onFinishedLoading: patchFinishedLoading,
+      allowLocalFileAccess: true
     });
   });
 </script>
