fix escape key handling

--- a/patch/index.html
+++ b/patch/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>A DEMO</title>
+    <title>cables</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
     <style>
         body {
